--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -508,6 +508,214 @@
     "print(highest_frequency_char(s))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15. Write a program to find the second-highest number in a list.\n",
+    "\n",
+    "def second_lar_num(l):\n",
+    "    min_l = min(l)\n",
+    "    d = {}\n",
+    "    for i in range(len(l)-1):\n",
+    "        if min_l < i:\n",
+    "            d[i] = i - min_l\n",
+    "    return min(d)\n",
+    "l = [5,2,3,2,3,4,9,1,5]\n",
+    "print(second_lar_num(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 3, 4, 9, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16. Write a program to take a list as input and print another list with only the unique values of the input list.\n",
+    "\n",
+    "def uniq_list(l):\n",
+    "    l1 = []\n",
+    "    for i in l:\n",
+    "        if i not in l1:\n",
+    "            l1.append(i)\n",
+    "    return l1\n",
+    "l = [5,2,3,2,3,4,9,1,5]\n",
+    "print(uniq_list(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of unique values: [1, 2, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_unique_values(input_list):\n",
+    "    unique_list = list(set(input_list))\n",
+    "    return unique_list\n",
+    "\n",
+    "input_list = [5,2,3,2,3,4,9,1,5]\n",
+    "unique_list = get_unique_values(input_list)\n",
+    "print(\"List of unique values:\", unique_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique names: ['Bob', 'Charlie', 'Alice', 'Edward', 'David']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17. Implement the unique_names method. When passed two lists of names, it will return a list containing the names that \n",
+    "# appear in either or both lists. The returned list should have no duplicates.\n",
+    "\n",
+    "def unique_names(list1, list2):\n",
+    "\n",
+    "    combined_list = list1 + list2\n",
+    "\n",
+    "    unique_list = list(set(combined_list))\n",
+    "    return unique_list\n",
+    "\n",
+    "list1 = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "list2 = [\"Bob\", \"David\", \"Edward\"]\n",
+    "\n",
+    "result = unique_names(list1, list2)\n",
+    "print(\"Unique names:\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': ['file1.txt', 'file3.txt'], 'Bob': ['file2.txt', 'file5.txt'], 'Charlie': ['file4.txt']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def files_by_owner(file_dict):\n",
+    "    owner_dict = {}\n",
+    "    for file_name, owner_name in file_dict.items():\n",
+    "        if owner_name in owner_dict:\n",
+    "            owner_dict[owner_name].append(file_name)\n",
+    "        else:\n",
+    "            owner_dict[owner_name] = [file_name]\n",
+    "    return owner_dict\n",
+    "\n",
+    "# Example usage:\n",
+    "file_dict = {\n",
+    "    \"file1.txt\": \"Alice\",\n",
+    "    \"file2.txt\": \"Bob\",\n",
+    "    \"file3.txt\": \"Alice\",\n",
+    "    \"file4.txt\": \"Charlie\",\n",
+    "    \"file5.txt\": \"Bob\"\n",
+    "}\n",
+    "\n",
+    "result = files_by_owner(file_dict)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19. Implement a function to take a list of numbers as an argument and return a list that will have a 0 for every \n",
+    "# corresponding number of the input list if the number is not perfect, otherwise 1.\n",
+    "\n",
+    "def is_perfect(number):\n",
+    "    if number < 2:\n",
+    "        return False\n",
+    "    sum_divisors = sum(i for i in range(1, number) if number % i == 0)\n",
+    "    return sum_divisors == number\n",
+    "\n",
+    "def perfect_numbers_list(numbers):\n",
+    "    return [1 if is_perfect(number) else 0 for number in numbers]\n",
+    "\n",
+    "# Example usage:\n",
+    "input_list = [6, 28, 12, 15, 496]\n",
+    "result = perfect_numbers_list(input_list)\n",
+    "print(result)  # Output: [1, 1, 0, 0, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'date', 'apple', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20. Implement a function that accepts 2 lists. One with the values and the other with corresponding integer values and \n",
+    "# returns a list with the elements of list1 arranged in increasing order of corresponding list2 elements.\n",
+    "\n",
+    "def sort_by_second_list(list1, list2):\n",
+    "    combined_list = list(zip(list1, list2))\n",
+    "\n",
+    "    sorted_combined_list = sorted(combined_list, key=lambda x: x[1])\n",
+    "\n",
+    "    sorted_list1 = [item[0] for item in sorted_combined_list]\n",
+    "    return sorted_list1\n",
+    "\n",
+    "\n",
+    "list1 = ['apple', 'banana', 'cherry', 'date']\n",
+    "list2 = [3, 1, 4, 2]\n",
+    "\n",
+    "result = sort_by_second_list(list1, list2)\n",
+    "print(result)  # Output: ['banana', 'date', 'apple', 'cherry']\n"
+   ]
   }
  ],
  "metadata": {
