--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -22,6 +22,132 @@
     "list1 = [1, 3, 2, 4, 4, 5, 6, 6]\n",
     "print(second_highest(list1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2. Question: Write a function to compute the factorial of a number using recursion.\n",
+    "\n",
+    "def fact(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    return fact(x-1)*x\n",
+    "print(fact(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['radar', 'level']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Question: You are given a list of strings. Write a function to filter out all strings that are palindromes.\n",
+    "def is_palindrome(s):\n",
+    "    s = ''.join(e for e in s if e.isalnum())\n",
+    "    return s.lower() == s.lower()[::-1]\n",
+    "\n",
+    "def filter_palindrome(strings):\n",
+    "    return [s for s in strings if is_palindrome(s)]\n",
+    "\n",
+    "words = [\"radar\", \"python\", \"level\", \"world\"]\n",
+    "print(filter_palindrome(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4. Question: Given a string, write a function to check if it is an anagram of another string.\n",
+    "def are_anagram(str1,str2):\n",
+    "    return sorted(str1) == sorted(str2)\n",
+    "\n",
+    "str1 = \"listen\"\n",
+    "str2 = \"silent\"\n",
+    "print(are_anagram(str1,str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5. Question: Write a function to flatten a nested list.\n",
+    "def sorted_list(nested_list):\n",
+    "    l1 = []\n",
+    "    for i in nested_list:\n",
+    "        if type(i) is list:\n",
+    "            l1.extend(sorted_list(i))\n",
+    "        else:\n",
+    "            l1.append(i)\n",
+    "    return l1\n",
+    "nested_list = [1, [2, 3, [4, 5]], 6]\n",
+    "print(sorted_list(nested_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def flatten(lst):\n",
+    "    result = []\n",
+    "    for i in lst:\n",
+    "        if isinstance(i, list):\n",
+    "            result.extend(flatten(i))\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result\n",
+    "\n",
+    "nested_list = [1, [2, 3, [4, 5]], 6]\n",
+    "print(flatten(nested_list))  # Output: [1, 2, 3, 4, 5, 6]\n"
+   ]
   }
  ],
  "metadata": {
