--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -148,6 +148,55 @@
     "nested_list = [1, [2, 3, [4, 5]], 6]\n",
     "print(flatten(nested_list))  # Output: [1, 2, 3, 4, 5, 6]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6. Question: Given two lists, write a function that returns the elements that are common to both lists.\n",
+    "\n",
+    "def common_lst(lst1,lst2):\n",
+    "    lst = []\n",
+    "    for i in lst1:\n",
+    "        if i in lst2:\n",
+    "            lst.append(i)\n",
+    "    return lst\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "list2 = [4, 5, 6, 7, 8]\n",
+    "print(common_lst(list1,list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def common_elements(list1, list2):\n",
+    "    return list(set(list1) & set(list2))\n",
+    "\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "list2 = [4, 5, 6, 7, 8]\n",
+    "print(common_elements(list1, list2))  # Output: [4, 5]"
+   ]
   }
  ],
  "metadata": {
