--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -197,6 +197,27 @@
     "list2 = [4, 5, 6, 7, 8]\n",
     "print(common_elements(list1, list2))  # Output: [4, 5]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7. Question: Write a function that returns the number of words in a string.\n",
+    "def word_count(sentence):\n",
+    "    return len(sentence.split())\n",
+    "sentence = \"The quick brown fox\"\n",
+    "print(word_count(sentence))"
+   ]
   }
  ],
  "metadata": {
