--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -218,6 +218,87 @@
     "sentence = \"The quick brown fox\"\n",
     "print(word_count(sentence))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 3, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8. Question: Write a Python function to merge two dictionaries. If both dictionaries have the same key, prefer the second \n",
+    "# dictionary's value.\n",
+    "\n",
+    "def merge_dicts(dict1,dict2):\n",
+    "    merged = dict1.copy()\n",
+    "    merged.update(dict2)\n",
+    "    return merged\n",
+    "dict1 = {'a': 1, 'b': 2}\n",
+    "dict2 = {'b': 3, 'c': 4}\n",
+    "print(merge_dicts(dict1, dict2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 3, 'c': 1, 'd': 4, 'e': 1}\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9. Question: Write a function that finds the most repeated character in a string.\n",
+    "\n",
+    "def most_repeated(s):\n",
+    "    char_count = {}\n",
+    "    for char in s:\n",
+    "        if char in char_count:\n",
+    "            char_count[char] += 1\n",
+    "        else:\n",
+    "            char_count[char] = 1\n",
+    "    print(char_count)\n",
+    "    max_char = max(char_count, key=char_count.get)\n",
+    "    return max_char\n",
+    "string = \"aabbbcdddde\"\n",
+    "print(most_repeated(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10. Question: Write a function that checks if a string contains all letters of the alphabet at least once.\n",
+    "import string\n",
+    "def contains_all_alphabets(s):\n",
+    "    alphabet = set(string.ascii_lowercase)\n",
+    "    return set(s.lower()) >= alphabet\n",
+    "\n",
+    "test_string = \"The quick brown fox jumps over the lazy dog\"\n",
+    "print(contains_all_alphabets(test_string))  # Output: True"
+   ]
   }
  ],
  "metadata": {
