--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -299,6 +299,150 @@
     "test_string = \"The quick brown fox jumps over the lazy dog\"\n",
     "print(contains_all_alphabets(test_string))  # Output: True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11. Question: Write a function that checks if a given string is a valid IPv4 address.\n",
+    "\n",
+    "def is_valid_ipv4(ip):\n",
+    "    parts = ip.split(\".\")\n",
+    "    if len(parts) != 4:\n",
+    "        return False\n",
+    "    for item in parts:\n",
+    "        if not item.isdigit():\n",
+    "            return False\n",
+    "        num = int(item)\n",
+    "        if num < 0 or num > 255:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "address = \"192.168.1.1\"\n",
+    "print(is_valid_ipv4(address))  # Output: True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean': 3.888888888888889, 'median': 4, 'mode': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12. Question: Given a list of numbers, write a function to compute the mean, median, and mode.\n",
+    "from statistics import mean, median, mode\n",
+    "\n",
+    "def compute_stats(numbers):\n",
+    "    return {\n",
+    "        \"mean\": mean(numbers),\n",
+    "        \"median\": median(numbers),\n",
+    "        \"mode\": mode(numbers)\n",
+    "    }\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 4, 5, 5, 5, 6]\n",
+    "print(compute_stats(numbers))  # Output: {'mean': 3.89, 'median': 4, 'mode': 5}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13. Question: Write a function to compute the Fibonacci series up to n.\n",
+    "def fibonacci(n):\n",
+    "    series = [0, 1]\n",
+    "    while len(series) < n:\n",
+    "        series.append(series[-1] + series[-2])\n",
+    "    return series\n",
+    "\n",
+    "number = 10\n",
+    "print(fibonacci(number))  # Output: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14. Question: Given a string, write a function that returns the first non-repeated character.\n",
+    "\n",
+    "def first_non_repeated(s):\n",
+    "    char_count = {}\n",
+    "    for char in s:\n",
+    "        if char in char_count:\n",
+    "            char_count[char] += 1\n",
+    "        else:\n",
+    "            char_count[char] = 1\n",
+    "    for char in s:\n",
+    "        if char_count[char] == 1:\n",
+    "            return char\n",
+    "    return None\n",
+    "\n",
+    "string = \"swiss\"\n",
+    "print(first_non_repeated(string))  # Output: 'w'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15. Question: Write a function to check if two strings are a rotation of each other (e.g., \"abcde\" and \"cdeab\" are rotations \n",
+    "# of each other).\n",
+    "\n",
+    "def are_rotations(str1, str2):\n",
+    "    if len(str1) != len(str2):\n",
+    "        return False\n",
+    "    return str1 in str2 + str2\n",
+    "\n",
+    "s1 = \"abcde\"\n",
+    "s2 = \"cdeab\"\n",
+    "print(are_rotations(s1, s2))  # Output: True\n"
+   ]
   }
  ],
  "metadata": {
