--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -443,6 +443,41 @@
     "s2 = \"cdeab\"\n",
     "print(are_rotations(s1, s2))  # Output: True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#16. Question: Write a function to determine if a string has all unique characters (i.e., no character is repeated).\n",
+    "def unique_str(s):\n",
+    "    if len(s) == len(set(s)):\n",
+    "        return True\n",
+    "    return False\n",
+    "s = 'abcdef'\n",
+    "unique_str(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
