--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -472,12 +472,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[1, 2, 4, 5, 6, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19. Question: Given a list of integers, write a function to move all zeros to the end of the list while maintaining the order \n",
+    "# of the other elements.    \n",
+    "\n",
+    "\n",
+    "def zero_list(l):\n",
+    "    count = l.count(0)    \n",
+    "    print(count)\n",
+    "    lst = [x for x in l if x != 0]\n",
+    "    lst.extend([0]*count)\n",
+    "    return lst\n",
+    "numbers = [1, 2, 0, 4, 0, 5, 6, 0]\n",
+    "print(zero_list(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20. 22. Question: Write a function to find the longest common prefix of a list of strings.\n",
+    "\n",
+    "def longest_common_prefix(strings):\n",
+    "    if not strings:\n",
+    "        return \"\"\n",
+    "    prefix = strings[0]\n",
+    "    for s in strings[1:]:\n",
+    "        while not s.startswith(prefix):\n",
+    "            prefix = prefix[:-1]\n",
+    "    return prefix\n",
+    "\n",
+    "strings = [\"flower\", \"flow\", \"flight\"]\n",
+    "print(longest_common_prefix(strings))  # Output: \"fl\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
