--- a/Interview Questions/sprint_1.ipynb
+++ b/Interview Questions/sprint_1.ipynb
@@ -190,6 +190,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function that returns the n-th Fibonacci number using recursion.\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    if n < 0:\n",
+    "        print('Incorrect input')\n",
+    "    elif n == 0:\n",
+    "        return a\n",
+    "    elif n == 1:\n",
+    "        return b\n",
+    "    else:\n",
+    "        for i in range(2,n+1):\n",
+    "            c = a+b\n",
+    "            a = b\n",
+    "            b = c\n",
+    "        return b\n",
+    "print(fibonacci(9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)\n",
+    "print(fibonacci(9))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
