--- a/Interview_questions_2/sprint_1.ipynb
+++ b/Interview_questions_2/sprint_1.ipynb
@@ -532,10 +532,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longestCommonPrefix(strings):\n",
+    "    ans = ''\n",
+    "    first = strings[0]\n",
+    "    last = strings[-1]\n",
+    "    for i in range(min(len(first), len(last))):\n",
+    "        if first[i] != last[i]:\n",
+    "            return ans\n",
+    "        ans += first[i]\n",
+    "    return ans\n",
+    "strings = [\"flower\", \"flow\", \"flight\"]\n",
+    "print(longestCommonPrefix(strings))"
+   ]
   }
  ],
  "metadata": {
