--- a/Interview_questions_2/sprint_2.ipynb
+++ b/Interview_questions_2/sprint_2.ipynb
@@ -101,6 +101,84 @@
     "print(is_one_edit_away(\"pale\", \"bale\"))  # Output: True\n",
     "print(is_one_edit_away(\"pale\", \"bake\"))  # Output: False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#26. Question: Write a function that returns the nth number in the Fibonacci sequence using recursion.\n",
+    "\n",
+    "def nth_fib(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return nth_fib(n-1) + nth_fib(n-2)\n",
+    "print(nth_fib(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#27. Question: Write a function to flatten a nested list of integers. Assume each element is either an integer or a \n",
+    "# list.\n",
+    "\n",
+    "def flatten_nested(nested):\n",
+    "    l = []\n",
+    "    for i in nested:\n",
+    "        if type(i) == list:\n",
+    "            l.extend(flatten_nested(i))\n",
+    "        else:\n",
+    "            l.append(i)\n",
+    "    return l\n",
+    "nested = [1, [2, 3, [4, 5], 6], 7, [8, 9]]\n",
+    "print(flatten_nested(nested))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palindorme\n"
+     ]
+    }
+   ],
+   "source": [
+    "#28. Question: Write a function to check if a given string is a palindrome.\n",
+    "\n",
+    "def check_palindrome(string):\n",
+    "    if string == string[::-1]:\n",
+    "        return 'palindorme'\n",
+    "    return 'not'\n",
+    "string = \"radar\"\n",
+    "print(check_palindrome(string))\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
