--- a/Interview_questions_2/sprint_2.ipynb
+++ b/Interview_questions_2/sprint_2.ipynb
@@ -179,6 +179,70 @@
     "print(check_palindrome(string))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#29. Question: Given a string containing just the characters '(', ')', '{', '}', '[' and ']', determine if the \n",
+    "#input string is valid. An input string is valid if:\n",
+    "\n",
+    "def is_valid_brackets(s):\n",
+    "    stack = []\n",
+    "    mapping = {\")\": \"(\", \"}\": \"{\", \"]\": \"[\"}\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char in mapping:\n",
+    "            top_element = stack.pop()\n",
+    "            if mapping[char] != top_element:\n",
+    "                return False\n",
+    "        else:\n",
+    "            stack.append(char)\n",
+    "    return not stack\n",
+    "\n",
+    "brackets = \"{[]}\"\n",
+    "print(is_valid_brackets(brackets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#30. Question: Write a function to find the two numbers in a list that sum up to a specific target.\n",
+    "\n",
+    "def two_sum(nums,target):\n",
+    "    num_dict = {}\n",
+    "    for i, num in enumerate(nums):\n",
+    "        complement = target - num\n",
+    "        if complement in num_dict:\n",
+    "            return [num_dict[complement], i]\n",
+    "        num_dict[num] = i\n",
+    "    return None\n",
+    "\n",
+    "numbers = [2, 7, 11, 15]\n",
+    "target_value = 9\n",
+    "print(two_sum(numbers,target_value))"
+   ]
   }
  ],
  "metadata": {
