--- a/Interview_questions_2/sprint_3.ipynb
+++ b/Interview_questions_2/sprint_3.ipynb
@@ -63,6 +63,44 @@
     "string = \"swiss\"\n",
     "print(non_repeated(string))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33. Question: Write a function to find all the prime numbers less than a given number n.\n",
+    "\n",
+    "def find_primes(n):\n",
+    "    if n <= 2:\n",
+    "        return []\n",
+    "    primes = [True] * n\n",
+    "    primes[0], primes[1] = False, False\n",
+    "    for i in range(2, int(n ** 0.5) + 1):\n",
+    "        if primes[i]:\n",
+    "            for j in range(i * i, n, i):\n",
+    "                primes[j] = False\n",
+    "    return [i for i, val in enumerate(primes) if val]\n",
+    "\n",
+    "number = 30\n",
+    "print(find_primes(number))  # Output: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
