--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -277,6 +277,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "18 12\n",
+      "12 6\n",
+      "6 0\n",
       "6\n"
      ]
     }
@@ -292,6 +295,202 @@
     "a = 48\n",
     "b = 18\n",
     "print(find_gcd(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11. Write a program to find the LCM of two numbers.\n",
+    "\n",
+    "def find_lcm(a,b):\n",
+    "    \n",
+    "    if a > b:\n",
+    "        greater  = a\n",
+    "    else:\n",
+    "        greater = b\n",
+    "    \n",
+    "    while True:\n",
+    "        if greater % a == 0 and greater % b == 0:\n",
+    "            lcm = greater\n",
+    "            break\n",
+    "        greater += 1\n",
+    "    return lcm\n",
+    "\n",
+    "a = 12\n",
+    "b = 15\n",
+    "\n",
+    "print(find_lcm(a,b))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vowels:3,Consonants:7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12. Counting Vowels and Consonants in a String\n",
+    "\n",
+    "def counting_str(string):\n",
+    "        \n",
+    "    vowels = 'aeiouAEIOU'\n",
+    "    constants = 'bcdfghjklmnpqrstvwxyzBCDFGHJKLMNPQRSTVWXYZ'\n",
+    "    \n",
+    "    vcnt = 0\n",
+    "    ccnt = 0\n",
+    "    \n",
+    "    for i in string:\n",
+    "        if i in vowels:\n",
+    "            vcnt += 1\n",
+    "        elif i in constants:\n",
+    "            ccnt += 1\n",
+    "    return f'Vowels:{vcnt},Consonants:{ccnt}'\n",
+    "\n",
+    "string = \"hello world\"\n",
+    "print(counting_str(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gnimmargorp\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13. Write a program to reverse a given string.\n",
+    "\n",
+    "def rev_string(string):\n",
+    "    \n",
+    "    return string[::-1]\n",
+    "\n",
+    "string = \"programming\"\n",
+    "print(rev_string(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gnimmargorp\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13. Write a program to reverse a given string. (method 2)\n",
+    "\n",
+    "def reverse_string(string):\n",
+    "    reverse_str = ''\n",
+    "    for char in string:\n",
+    "        reverse_str = char + reverse_str\n",
+    "    return reverse_str\n",
+    "\n",
+    "string = \"programming\"\n",
+    "print(reverse_string(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gnimmargorp\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13. Write a program to reverse a given string. (using recusrion)\n",
+    "\n",
+    "def recurse_reverse(string):\n",
+    "    if len(string) == 0:\n",
+    "        return string\n",
+    "    return recurse_reverse(string[1:]) + string[0]\n",
+    "\n",
+    "string = \"programming\"\n",
+    "print(recurse_reverse(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest: 8, Smallest: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14. Write a program to find the largest and smallest numbers in an array.\n",
+    "\n",
+    "def find_large_small(list):\n",
+    "    max_list = max(list)\n",
+    "    min_list = min(list)\n",
+    "    return f'Largest: {max_list}, Smallest: {min_list}'\n",
+    "\n",
+    "list = [4, 7, 1, 8, 5]\n",
+    "print(find_large_small(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15. Write a program to sort an array of numbers in ascending order.\n",
+    "\n",
+    "def sort_list(list):\n",
+    "    list.sort()\n",
+    "    return list\n",
+    "list = [3, 1, 4, 1, 5, 9]\n",
+    "print(sort_list(list))"
    ]
   }
  ],
