--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -492,6 +492,161 @@
     "list = [3, 1, 4, 1, 5, 9]\n",
     "print(sort_list(list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 16. Write a program to find the sum of elements in an array.\n",
+    "\n",
+    "def sum_elements(list):\n",
+    "    result = 0\n",
+    "    \n",
+    "    for i in list:\n",
+    "        result += i\n",
+    "    return result\n",
+    "\n",
+    "list = [1, 2, 3, 4, 5]\n",
+    "print(sum_elements(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17. Write a program to find all Armstrong numbers within a given range.\n",
+    "\n",
+    "def is_armstrong(num):\n",
+    "    digits = str(num)\n",
+    "    num_digits = len(digits)\n",
+    "    sum_of_powers = sum(int(digit) ** num_digits for digit in digits)\n",
+    "    return num == sum_of_powers\n",
+    "\n",
+    "def find_armstrong_num(start,end):\n",
+    "    armstrong_num = []\n",
+    "    for i in range(start,end+1):\n",
+    "        if is_armstrong(i):\n",
+    "            armstrong_num.append(i)\n",
+    "    return armstrong_num\n",
+    "start = 1\n",
+    "end = 500\n",
+    "print(find_armstrong_num(start,end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18. Write a program to generate multiplication tables for a given number.\n",
+    "\n",
+    "def gen_mul(num):\n",
+    "    for i in range(1,num+2):\n",
+    "        print(f'{num} x {i} = {num*i}')\n",
+    "num = 4\n",
+    "gen_mul(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 13, 17, 19, 23, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19. Write a program to find all prime numbers within a given range.\n",
+    "\n",
+    "def prime_check(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(num // 2)+1):\n",
+    "        if num%i == 0:\n",
+    "            return False\n",
+    "    return 'Prime'\n",
+    "    \n",
+    "def prime_range(start,end):\n",
+    "    prime_number = []\n",
+    "    for i in range(start,end+1):\n",
+    "        if prime_check(i):\n",
+    "            prime_number.append(i)\n",
+    "    return prime_number\n",
+    "start = 10\n",
+    "end = 30\n",
+    "print(prime_range(start,end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 is a perfect number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20. Write a program to determine if a number is a perfect number.\n",
+    "\n",
+    "def is_perfet_num(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    divisor_sum = 0\n",
+    "    for i in range(1,num//2+1):\n",
+    "        if num%i == 0:\n",
+    "            divisor_sum += i\n",
+    "    return divisor_sum == num\n",
+    "\n",
+    "num = 28\n",
+    "\n",
+    "if is_perfet_num(num):\n",
+    "    print(f\"{num} is a perfect number.\")\n",
+    "else:\n",
+    "    print(f\"{num} is not a perfect number.\")"
+   ]
   }
  ],
  "metadata": {
