--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -647,6 +647,274 @@
     "else:\n",
     "    print(f\"{num} is not a perfect number.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#21 Write a program to find the sum of all even numbers within a given range.\n",
+    "\n",
+    "def sum_range(list):\n",
+    "    start = list[0]\n",
+    "    end  = list[1]\n",
+    "    result = 0\n",
+    "    for i in range(start,end+1):\n",
+    "        if i%2 == 0:\n",
+    "            result = i + result\n",
+    "    return result\n",
+    "list = [1,10]\n",
+    "print(sum_range(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#22 Write a program to find the sum of all odd numbers within a given range.\n",
+    "\n",
+    "\n",
+    "def sum_range_odd(list):\n",
+    "    start = list[0]\n",
+    "    end  = list[1]\n",
+    "    result = 0\n",
+    "    for i in range(start,end+1):\n",
+    "        if i%2 != 0:\n",
+    "            result = i + result\n",
+    "    return result\n",
+    "list = [1,10]\n",
+    "print(sum_range_odd(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#23 Write a program to find the Fibonacci number at a specific position.\n",
+    "def fibo_position(position):\n",
+    "    \n",
+    "    if position <= 0:\n",
+    "        return 'Position must be a positive number'\n",
+    "    elif position == 1:\n",
+    "        return 0\n",
+    "    elif position == 2:\n",
+    "        return 1\n",
+    "    \n",
+    "    a,b = 0,1\n",
+    "    for _ in range(2,position+1):\n",
+    "        a,b = b,a+b\n",
+    "    return b\n",
+    "position = 5\n",
+    "print(fibo_position(position))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#24 Write a program to print all prime numbers less than a given number.\n",
+    "\n",
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    if num == 2:\n",
+    "        return True\n",
+    "    if num%2 == 0:\n",
+    "        return False\n",
+    "    for i in range(3, (num//2)+1):\n",
+    "        if num%i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def prime_check(number):\n",
+    "    prime_nums = []\n",
+    "    for i in range(2,number):\n",
+    "        if is_prime(i):\n",
+    "            prime_nums.append(i)\n",
+    "    return prime_nums\n",
+    "\n",
+    "number = 20\n",
+    "print(prime_check(number))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#25 Write a program to count the number of digits in a given number.\n",
+    "\n",
+    "def count_check(digits):\n",
+    "    return len(str(digits))\n",
+    "digits = 12345\n",
+    "print(count_check(digits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Narcissistic Number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#26 Write a program to check if a number is a narcissistic number (where the sum of its digits raised to the power of the number of digits equals the number itself).\n",
+    "\n",
+    "def is_narcicst(number):\n",
+    "    num_digit = str(number)\n",
+    "    digit = len(str(number))\n",
+    "    \n",
+    "    sum_of_power = sum(int(num) ** digit for num in num_digit)\n",
+    "    return sum_of_power == number\n",
+    "number = 153\n",
+    "if is_narcicst(number):\n",
+    "    print(\"Narcissistic Number\")\n",
+    "else:\n",
+    "    print(\"Not a Narcissistic Number\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2 3\n",
+      "4 5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#27 Write a program to generate number patterns (e.g., sequential numbers in a matrix).\n",
+    "\n",
+    "def generate_num_pattern(rows):\n",
+    "    number = 1\n",
+    "    for i in range(1,rows+1):\n",
+    "        row = []\n",
+    "        for j in range(i):\n",
+    "            row.append(number)\n",
+    "            number += 1\n",
+    "        print(\" \".join(map(str,row)))\n",
+    "    \n",
+    "rows = 3\n",
+    "generate_num_pattern(rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#28 Write a program to find the sum of the digits of the factorial of a given number.\n",
+    "\n",
+    "def fact(number):\n",
+    "    fact = 1\n",
+    "    for i in range(number,0,-1):\n",
+    "        fact = i*fact\n",
+    "    result = 0\n",
+    "    for i in str(fact):\n",
+    "        result = int(i) + result\n",
+    "    return result\n",
+    "number = 4\n",
+    "print(fact(number))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#30 Write a program to find missing numbers in a sequence from 1 to n.\n",
+    "def missing_n(sequence):\n",
+    "    d = {}\n",
+    "    for i in sequence:\n",
+    "        d[i] = True\n",
+    "    for i in range(1,len(sequence)+1):\n",
+    "        if not d.get(i):\n",
+    "            return i\n",
+    "        \n",
+    "sequence = [0,1, 2, 4, 5]\n",
+    "print(missing_n(sequence))"
+   ]
   }
  ],
  "metadata": {
