--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -915,6 +915,40 @@
     "sequence = [0,1, 2, 4, 5]\n",
     "print(missing_n(sequence))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1 1\n",
+      "1 2 2\n",
+      "1 3 4 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_pascal_triangle(rows):\n",
+    "    triangle = []\n",
+    "    for i in range(rows):\n",
+    "        row = [1]\n",
+    "        if i > 0:\n",
+    "            for j in range(1,i):\n",
+    "                row.append(triangle[i-1][j-1] + triangle[i-1][j])\n",
+    "            row.append(i)\n",
+    "        triangle.append(row)\n",
+    "    return triangle\n",
+    "\n",
+    "rows = 4\n",
+    "pascal_triangle = generate_pascal_triangle(rows)\n",
+    "for row in pascal_triangle:\n",
+    "    print(' '.join(map(str,row)))"
+   ]
   }
  ],
  "metadata": {
