--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -933,6 +933,7 @@
     }
    ],
    "source": [
+    "#31. Write a program to generate Pascal's Triangle up to a given number of rows.\n",
     "def generate_pascal_triangle(rows):\n",
     "    triangle = []\n",
     "    for i in range(rows):\n",
@@ -949,6 +950,114 @@
     "for row in pascal_triangle:\n",
     "    print(' '.join(map(str,row)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#32 Write a program to find the median of an array of numbers.\n",
+    "from statistics import *\n",
+    "def find_meading(list):\n",
+    "    return median(list)\n",
+    "array = [3, 1, 2, 4, 5]\n",
+    "print(find_meading(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33. Write a program to calculate the power of a number.\n",
+    "\n",
+    "def power(base,exponent):\n",
+    "    return base ** exponent\n",
+    "base = 2\n",
+    "exponent = 3\n",
+    "print(power(base,exponent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33. Write a program to calculate the power of a number.\n",
+    "\n",
+    "def find_med(arr):\n",
+    "    arr.sort()\n",
+    "    n = len(arr)\n",
+    "    if n%2 !=  0:\n",
+    "        median = arr[n//2]\n",
+    "    else:\n",
+    "        median = (arr[(n//2)-1] + arr[n//2]) / 2\n",
+    "    return median\n",
+    "\n",
+    "numbers = [3, 1, 2, 4, 5]\n",
+    "print(find_med(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "#34. Write a program to check if two strings are anagrams.\n",
+    "\n",
+    "def anagram_check(str1,str2):\n",
+    "    str1 = sorted(str1)\n",
+    "    str2 = sorted(str2)\n",
+    "    if len(str1) == len(str2) and str1 == str2:\n",
+    "        return 'anagram'\n",
+    "    return 'not anagram'\n",
+    "str1 = \"listen\"\n",
+    "str2 = \"silent\"\n",
+    "print(anagram_check(str1,str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
