--- a/Programming-Street-150/sprint_1.ipynb
+++ b/Programming-Street-150/sprint_1.ipynb
@@ -1054,10 +1054,441 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "#35 Write a program to calculate the sum of all prime numbers within a given range.\n",
+    "\n",
+    "def is_prime(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2,(num//2)+1):\n",
+    "        if num%i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def range_prime(start,end):\n",
+    "    result = sum(int(digit) for digit in range(start,end) if is_prime(digit))\n",
+    "    return result\n",
+    "start = 1\n",
+    "end = 10\n",
+    "print(range_prime(start,end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#36. Write a program to find the N-th triangular number.\n",
+    "\n",
+    "def nth_triangle_number(n):\n",
+    "    \n",
+    "    return (n*(n+1))//2\n",
+    "\n",
+    "n = 4\n",
+    "print(nth_triangle_number(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#37. Write a program to determine if a number is a perfect square.\n",
+    "import math\n",
+    "def is_perfect_square(num):\n",
+    "    \n",
+    "    sqrt_num = math.isqrt(num)\n",
+    "    return sqrt_num * sqrt_num == num\n",
+    "num = 16\n",
+    "print(is_perfect_square(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "#38. Write a program to find the sum of the squares of the digits of a number.\n",
+    "\n",
+    "def find_sum_square(num):\n",
+    "    \n",
+    "    digit = str(num)\n",
+    "    result = 0\n",
+    "    for i in digit:\n",
+    "        result += int(i)*int(i)\n",
+    "    return result\n",
+    "num = 123\n",
+    "print(find_sum_square(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "456\n",
+      "789\n"
+     ]
+    }
+   ],
+   "source": [
+    "#39. Write a program to generate a square matrix of a given size and fill it with sequential numbers.\n",
+    "\n",
+    "def generate_matrix(size):\n",
+    "    \n",
+    "    matrix = [[0 for i in range(size)] for i in range(size)]\n",
+    "    num = 1\n",
+    "    \n",
+    "    for i in range(size):\n",
+    "        for j in range(size):\n",
+    "            matrix[i][j] = num\n",
+    "            num += 1\n",
+    "    \n",
+    "    for row in matrix:\n",
+    "        print(''.join(str(x) for x in row))\n",
+    "        \n",
+    "size = 3\n",
+    "generate_matrix(size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#40. Write a program to keep summing the digits of a number until a single digit is obtained.\n",
+    "\n",
+    "def sum_of_digit(n):\n",
+    "    while n >= 10:\n",
+    "        n = sum(int(digit) for digit in str(n))\n",
+    "    return n\n",
+    "\n",
+    "n = 9875\n",
+    "print(sum_of_digit(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#41. Write a program to count the occurrences of a specific digit in a number.\n",
+    "\n",
+    "def specific_digit_count(number,digit):\n",
+    "    d = {}\n",
+    "    for i in str(number):\n",
+    "        if int(i) in d:\n",
+    "            d[int(i)] += 1\n",
+    "        else:\n",
+    "            d[int(i)] = 1\n",
+    "    for k,v in d.items():\n",
+    "        if k == digit:\n",
+    "            return v\n",
+    "number = 122333\n",
+    "digit = 3\n",
+    "print(specific_digit_count(number,digit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def specific_digit_count(number, digit):\n",
+    "    return str(number).count(str(digit))\n",
+    "\n",
+    "number = 122333\n",
+    "digit = 3\n",
+    "print(specific_digit_count(number, digit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#42. Write a recursive program to generate the Fibonacci sequence up to a given number.\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    if n <= 1:\n",
+    "        return n \n",
+    "    return fibonacci(n-1) + fibonacci(n-2)\n",
+    "\n",
+    "def generate_fibonacci_series(limit):\n",
+    "    result = []\n",
+    "    i = 0\n",
+    "    while True:\n",
+    "        fib_num = fibonacci(i)\n",
+    "        if fib_num > limit:\n",
+    "            break\n",
+    "        result.append(fib_num)\n",
+    "        i += 1\n",
+    "    return result\n",
+    "limit = 5\n",
+    "print(generate_fibonacci_series(limit))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 6, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#43. Write a program to find all divisors of a given number.\n",
+    "\n",
+    "def all_divisors(n):\n",
+    "    divisiors = []\n",
+    "    for i in range(1,n+1):\n",
+    "        if n%i == 0:\n",
+    "            divisiors.append(i)\n",
+    "    return divisiors\n",
+    "print(all_divisors(12))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#44. Write a program to calculate the average of numbers in an array.\n",
+    "\n",
+    "def avg(list):\n",
+    "    return sum(list)/len(list)\n",
+    "list = [1, 2, 3, 4, 5]\n",
+    "print(avg(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#45. Write a program to find the mode (most frequent number) in an array.\n",
+    "\n",
+    "def find_mode_k(list):\n",
+    "    d = {}\n",
+    "    for i in list:\n",
+    "        if i in d:\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    most_num = 0\n",
+    "    mode = None\n",
+    "    for k,v in d.items():\n",
+    "        if v > most_num:\n",
+    "            most_num = v\n",
+    "            mode = k\n",
+    "    return mode\n",
+    "list = [1, 2, 2, 3, 4, 4, 4]\n",
+    "print(find_mode_k(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#46. Write a program to determine the length of a string without using built-in functions.\n",
+    "\n",
+    "def string_count(string):\n",
+    "    result = 0\n",
+    "    for i in string:\n",
+    "        result += 1\n",
+    "    return result\n",
+    "string = 'Hello'\n",
+    "print(string_count(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "#47. Write a program to generate a pyramid of numbers (e.g., 1, 12, 123, etc.).\n",
+    "\n",
+    "def generate_pyramid(rows):\n",
+    "    \n",
+    "    for i in range(1,rows+1):\n",
+    "        row = ''.join(str(num) for num in range(1,i+1))\n",
+    "        print(row)\n",
+    "    \n",
+    "rows = 4\n",
+    "generate_pyramid(rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#48.  Write a program to find the sum of the prime factors of a given number.\n",
+    "\n",
+    "def sum_of_prime_factors(n):\n",
+    "    \n",
+    "    def is_prime(num):\n",
+    "        if num <= 1:\n",
+    "            return False\n",
+    "        if num <= 3:\n",
+    "            return True\n",
+    "        if num % 2 == 0 or num % 3 == 0:\n",
+    "            return False\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "#49. Write a program to find the second largest number in an array.\n",
+    "\n",
+    "def second_num(list):\n",
+    "    max_num = max(list)\n",
+    "    d = {}\n",
+    "    for i in list:\n",
+    "        if max_num > i:\n",
+    "            d[i] = i - max_num\n",
+    "    return max(d)\n",
+    "array = [10, 20, 4, 45, 99]\n",
+    "print(second_num(array))"
+   ]
   }
  ],
  "metadata": {
